# Bank-Churn-MoA-MixtureOfAgents

./: .flake8  README.md  config.yaml  conftest.py  dockerfile  pyproject.toml
.github/workflows/: mlops-pipeline.yml
data/processed_data/: Churn_Modelling_Prepared.csv
data/test/: test_data.csv
data/train/: train_data.csv
data/val/: val_data.csv
models/: data_preparation.pkl
models/moa_model/: MLmodel
models/moa_model_version_1/: MLmodel  conda.yaml
notebooks/: demoMoA.ipynb  demoMoABankChurn.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/965467437751245603/: meta.yaml
notebooks/mlruns/965467437751245603/043505d662e74923859fbff35c708dcf/: meta.yaml
notebooks/mlruns/965467437751245603/256674534b53454786587730c503817c/: meta.yaml
notebooks/mlruns/965467437751245603/2ab6e8d623884d8698547bb0f9491178/: meta.yaml
notebooks/mlruns/965467437751245603/31dabf2574c0412cba475675a0f70983/: meta.yaml
notebooks/mlruns/965467437751245603/3f525b8539934beb8b040e79cdc1fe63/: meta.yaml
notebooks/mlruns/965467437751245603/4d09046d20d641eebda0c778bc036ae4/: meta.yaml
notebooks/mlruns/965467437751245603/4d40da326238482e910979355accf5b9/: meta.yaml
notebooks/mlruns/965467437751245603/523931ccdb124c339eee967c36cf1efd/: meta.yaml
notebooks/mlruns/965467437751245603/567f8ea71cbc4af0bd0279a67204f9be/: meta.yaml
notebooks/mlruns/965467437751245603/59ba261eedc64868871a98232d0ea8c2/: meta.yaml
src/: app.py  main.py
src/features/: data_analysis.py  data_preparation.py  load_data.py
src/mlruns/0/: meta.yaml
src/mlruns/177437038741855704/: meta.yaml
src/mlruns/635741589109632587/: meta.yaml
src/mlruns/models/MixtureOfAgents/: meta.yaml
src/models/: mixture_of_agents.py  prediction.py  together_ai.py
src/utils/: decorators.py  logging_config.py
tests/test_data/: test_data_preparation.py
tests/test_models/: test_mixture_of_agents.py  test_prediction.py
(+165 files in other folders)
