[tool.poetry]
name = "moa-mixtureofagents-agents-project"
version = "0.1.0"
description = ""
authors = ["Adrian Infantes <infantesromeroadrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
together = "^1.2.6"
pandas = "^2.2.2"
matplotlib = "^3.9.1.post1"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
mlflow = "^2.15.1"
streamlit = "^1.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
